10 April 2020 Petasis George <petasis@iit.demokritos.gr>
 * frontend/clarin/js/app.js:
 * frontend/clarin/js/controllers/annotationCtrl.js:
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/templates/annotation.html:
 * frontend/clarin/templates/directives/toolbar.html: Added the ability to
 select a router for links.

 * frontend/clarin/js/directives/text-widget.js: Fixes in overlay box
 calculations.

07 April 2020 Petasis George <petasis@iit.demokritos.gr>
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/js/directives/toolbar-widget.js: Restricted "Delete" key
 binding only to the editor window.

06 April 2020 Petasis George <petasis@iit.demokritos.gr>
 * frontend/clarin/js/controllers/annotationCtrl.js:
 * frontend/clarin/js/controllers/modals/detectChangesModalCtrl.js:
 * frontend/clarin/js/controllers/modals/detectOpenDocModalCtrl.js:
 * frontend/clarin/js/directives/found-in-collection.js:
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/js/services/annotationSchemaService.js:
 * frontend/clarin/js/services/annotatorsTemplateService.js:
 * frontend/clarin/js/services/text-widget-api.js: Fixed various side-effects
 (mainly on modal dialogs) of storing Annotator id instead of Annotator type
 in the opened documents database.

05 April 2020 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/resources/views/index.php:
 * frontend/clarin/bower.json:
 * frontend/clarin/css/clarin.css:
 * frontend/clarin/js/config/ocLazyLoadConfig.js:
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/js/services/text-widget-api.js:
 * frontend/clarin/templates/annotation.html: Switched library for drawing
 lines (from LeaderLine to Joint). Now relations are put in asingle SVG
 element, layered on top of the editor.

02 April 2020 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/resources/views/index.php:
 * frontend/clarin/js/directives/annotator-widget.js: